--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>survey/a</title>
       <script src="https://cdn.amplitude.com/script/1bd261730172e6d86ce3af7477f3c86a.js"></script>
       <script>
-        window.amplitude.init('AMPLITUDE_API_KEY', {
+        window.amplitude.init('1bd261730172e6d86ce3af7477f3c86a', {
           fetchRemoteConfig: true,
           autocapture: true
         });
