fix: build error

--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
         'https://connect.facebook.net/en_US/fbevents.js');
         fbq('init', '1035356344859590');
       </script>
+      <!-- End Facebook Pixel Code -->
+    </head>
+
+    <body>
+      <!-- Facebook Pixel Code -->
       <noscript>
         <img height="1" width="1" style="display:none"
           src="https://www.facebook.com/tr?id=1035356344859590&ev=PageView&noscript=1"
         />
       </noscript>
       <!-- End Facebook Pixel Code -->
-    </head>
-
-    <body>
       <div id="root"></div>
       <script type="module" src="/src/main.tsx"></script>
     </body>
